--- a/style.css
+++ b/style.css
@@ -1,3 +1,86 @@
-.body {
+@font-face {
+    font-family: "KonstantGrotesk"; 
+    src: url("assets/fonts/KonstantGrotesk-Book.otf")
+}
+
+@font-face {
+    font-family: 'Inter', sans-serif;
+    src: url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap');
+}
+
+*{
+    padding: 0;
+    margin: 0;
+    font-family: 'KonstantGrotesk', sans-serif;
     
+}
+
+p {
+    font-family: 'Inter', sans-serif;
+}
+
+.main-content {
+    min-height: 100vh;
+    width: 80%;
+    margin: 2rem auto;
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+}
+
+.left-section {
+    border: 1px dotted;
+    grid-column: span 2;
+    height: 100%;
+}
+
+.avatar {
+    width: 100%;
+    border-radius: 80%;
+
+}
+
+.contact-info {
+    padding-top: 20px;
+}
+
+h3 {
+    border-bottom: 1px solid rgb(59, 59, 59);
+    padding-bottom: 5px;
+    width: 50%;
+    text-transform: uppercase;
+    padding-top: 30px;
+    font-style: normal;
+    line-height: 11px;
+    font-weight: 400;
+}
+
+.contact-info li{
+    padding: 0.2rem 0;
+    display: flex;
+    align-items: center;
+    font-style: normal;
+    font-weight: 400;
+}
+
+
+.right-section {
+    border: 1px dotted;
+    grid-column: span 5;
+    height: 100%;
+}
+
+.right-section h1 {
+    padding-top: 60px;
+    font-style: normal;
+    font-size: 40px;
+    font-weight: 400;
+    line-height: 32px;
+}
+
+.right-section p {
+    padding-top: 20px;
+    display: flex;
+    align-items: center;
+    font-style: normal;
+    font-weight: 400;
 }
