--- a/style.css
+++ b/style.css
@@ -1,86 +1,84 @@
-@font-face {
-    font-family: "KonstantGrotesk"; 
-    src: url("assets/fonts/KonstantGrotesk-Book.otf")
-}
+  /* Fonts */  
 
 @font-face {
-    font-family: 'Inter', sans-serif;
-    src: url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap');
+  font-family: 'KonstantGrotesk';
+  src: url('assets/fonts/KonstantGrotesk-Book.otf');
 }
 
-*{
-    padding: 0;
-    margin: 0;
-    font-family: 'KonstantGrotesk', sans-serif;
-    
+@font-face {
+  font-family: 'Inter', Arial, sans-serif;
+  src: url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap');
 }
 
-p {
-    font-family: 'Inter', sans-serif;
+/*    Global    */
+
+body {
+  min-width: 600px;
+  margin: 0;
+  padding: 0;
+  font-family: 'Inter', Arial, sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+/* background-image: linear-gradient(45deg, rgb(175, 175, 175), white); */
 }
 
-.main-content {
-    min-height: 100vh;
-    width: 80%;
-    margin: 2rem auto;
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
+a {
+  text-decoration: none; /* убрал подчеркивание */
+  color: black;
 }
 
-.left-section {
-    border: 1px dotted;
-    grid-column: span 2;
-    height: 100%;
+a:hover {
+  text-shadow: darkgrey 5px 5px 4px;
 }
 
-.avatar {
-    width: 100%;
-    border-radius: 80%;
-
+img { /* Все картинки растягиваются в рамках контейнера */
+  max-width: 100%; 
+  height: auto;
 }
 
-.contact-info {
-    padding-top: 20px;
+/*   NAV   */
+
+.navigation-list {
+  list-style: none; /* убрал точки у списков */
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
 }
 
-h3 {
-    border-bottom: 1px solid rgb(59, 59, 59);
-    padding-bottom: 5px;
-    width: 50%;
-    text-transform: uppercase;
-    padding-top: 30px;
-    font-style: normal;
-    line-height: 11px;
-    font-weight: 400;
+/*   MAIN   */
+
+h1 {
+  font-family: 'KonstantGrotesk';
+  font-style: normal;
+  font-weight: normal;
+  font-size: 50px;
+  line-height: 32px;
 }
 
-.contact-info li{
-    padding: 0.2rem 0;
-    display: flex;
-    align-items: center;
-    font-style: normal;
-    font-weight: 400;
+.section-title {
+  font-family: 'KonstantGrotesk'; 
+  text-transform: uppercase;
+  font-weight: 100;
+  font-size: 18px;
+}
+
+.contacts-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 
-.right-section {
-    border: 1px dotted;
-    grid-column: span 5;
-    height: 100%;
+
+code {
+  background-color: #eee;
+  border: 1px solid #999;
+  display: block;
+  padding: 20px;
 }
 
-.right-section h1 {
-    padding-top: 60px;
-    font-style: normal;
-    font-size: 40px;
-    font-weight: 400;
-    line-height: 32px;
-}
 
-.right-section p {
-    padding-top: 20px;
-    display: flex;
-    align-items: center;
-    font-style: normal;
-    font-weight: 400;
-}
+
+
+
+
