--- a/style.css
+++ b/style.css
@@ -23,7 +23,10 @@ body {
   font-family: 'Inter', Arial, sans-serif;
   font-size: 16px;
   font-weight: 400;
-  background-image: linear-gradient(90deg, rgb(185, 185, 202), rgb(255, 255, 255)); */
+  background-image: linear-gradient(90deg, rgb(185, 185, 202), rgb(255, 255, 255));
+  background-position: center 0;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 a {
